--- a/aula6/style.css
+++ b/aula6/style.css
@@ -7,4 +7,13 @@
 .container{
     width: 80%;
     border: 1px solid red;
+    margin: 10px auto;
+}
+.container img{
+    /* width: 100%; width: 100px; width: 100vw; */
+    width: 100%;
+}
+h1{
+    background-color: hsl(0 0% 50%/0.3);
+    text-align: center;
 }
