--- a/aula6-1/style.css
+++ b/aula6-1/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .container{
     width:80%; /* largura de 80% da página */
@@ -14,4 +15,11 @@
 }
 .container .box img{
     width: 100%;/* largura de 100% relativo a .box */
+}
+.sec{
+    background-color: gray;
+    height: 100vh;/* 100 vh, viewport, altura da página */
+}
+.sec h2{
+    color: orange
 }
