--- a/aula6-1/style.css
+++ b/aula6-1/style.css
@@ -13,6 +13,7 @@ html{
     border: 1px solid blue;/* espessura de 1px, tipo de linha sólida, cor da borda azul */
     display: flex;
     justify-content: space-between;
+    padding-top:30px;
 }
 .container .box{/* estilizar todas as .box que estão dentro de .container */
     width: 200px;
