--- a/aula7/style_lista.css
+++ b/aula7/style_lista.css
@@ -1,3 +1,6 @@
 .cardapio{/* estilizando class="cardapio" */
-    list-style-type: upper-roman;
+    list-style-type: lower-alpha;
+}
+.cardapio > li{
+    list-style-type:none;
 }
