--- a/aula7/style.css
+++ b/aula7/style.css
@@ -50,3 +50,8 @@ header nav ul li a:hover{
     height: 50vh;
     border: 1px solid red;
 }
+.d{
+    width:200px;
+    height:50px;
+    border:1px solid blue;
+}
