--- a/aula7/style.css
+++ b/aula7/style.css
@@ -55,6 +55,9 @@ header nav ul li a:hover{
     width: 100%;
     height: 50vh;
     border: 1px solid red;
+    display: flex;
+    justify-content: space-between;
+    /* valores para o justify-content: center|start|end|space-between */
 }
 .d{
     width:var(--largura-div);
@@ -73,4 +76,6 @@ header nav ul li a:hover{
 }
 .d3:hover{
     --cor-fundo-d3:hsl(120,100%,50%);
+    width: 150px;
+    border-radius: 10px;
 }
