--- a/aula9/style_transf.css
+++ b/aula9/style_transf.css
@@ -7,4 +7,5 @@
     width:100px;
     height: 100px;
     background-color: chocolate;
+    transform: translate(50px,50px);/* 50px eixo x, 100px eixo y*/
 }
