--- a/aula9/style_transf.css
+++ b/aula9/style_transf.css
@@ -6,11 +6,12 @@
 .teste{
     width:100px;
     height: 100px;
-    background-color: chocolate;
+    background-color: red;
     margin: 150px;
-    transition: 0.5s;
+    transition-property: transform , background;
+    transition-duration: 1s,2s; 
 }
 .teste:hover{
-    transform: translate(50px,50px) rotate(45deg) scale(0.5,0.5);/* 50px eixo x, 50px eixo y*/
-    
+    transform: translate(50px,0px) rotate(45deg) scale(0.5,0.5);/* 50px eixo x, 50px eixo y*/
+    background: yellow;
 }
