--- a/aula9/style_transf.css
+++ b/aula9/style_transf.css
@@ -12,7 +12,7 @@
     transition-property: transform , background,border-radius;
     transition-duration: 1s,2s,1s; 
     transition-delay: 0.5s;
-
+    transition-timing-function:linear; 
 }
 .teste:hover{
     transform: translate(50px,0px) rotate(45deg) scale(0.5,0.5);/* 50px eixo x, 50px eixo y*/
