--- a/aula91/style_transform.css
+++ b/aula91/style_transform.css
@@ -9,11 +9,13 @@
     background: cyan;
     /* transform: translate(200px,200px); */
     /* transform: rotate(45deg); */
-    
+    transition-property:transform,background;
+    transition-duration:1s,0.5s; 
     margin-left: 200px;
 }    
 .move:hover{
-    transform: scale(1.3,2);
+    transform: scale(2,1.5);
+    background: blueviolet;
 }    
 h1{
     margin-bottom:50px;
