--- a/aula91/style_animation.css
+++ b/aula91/style_animation.css
@@ -19,5 +19,7 @@ h1{
     }
     to {
         transform: translateX(500px);
+        background-color: cyan;
+        border-radius: 50%;
     }
 }
