--- a/aula91/style_animation.css
+++ b/aula91/style_animation.css
@@ -5,17 +5,18 @@
 }
 h1{
     margin-bottom:50px;
+    animation: flutua 5s ease-in-out infinite;
 }
 .move{
     width: 100px;
     height: 100px;
     background: blueviolet;
     animation-name: anima;
-    animation-duration: 3s;
+    animation-duration: 2s;
     animation-timing-function: ease-in-out;
     animation-delay: 0.4s;
     animation-iteration-count: infinite; 
-    animation-direction:reverse;
+    animation-direction:alternate;
 }
 @keyframes anima {
     from {
@@ -27,3 +28,14 @@ h1{
         border-radius: 50%;
     }
 }
+@keyframes flutua {
+    0%{
+        transform: translateY(0px);
+    }
+    50%{
+        transform: translateY(10px);
+    }
+    100%{
+        transform: translateY(0px);
+    }
+  }
